--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -26,6 +26,9 @@
 .glassCard {
   /* the semi-transparent “card” container */
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 90%;
   max-width: 1200px;
   min-height: 80vh;
@@ -53,7 +56,7 @@
   text-align: center;
 }
 
-.right {
+.films {
   width: 65%;
   padding: 2rem 3rem;
   display: grid;
