--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,14 @@ body {
 
 body {
   color: var(--foreground);
-  background: var(--background);
+  /* background: var(--background); */
+  background: linear-gradient(
+    135deg,
+    #f5dacf 0%,
+    #bcbcf3 100%
+  );
+  min-height: 100vh;
+  margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -39,4 +46,8 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+.mainContent {
+  padding-top: 4rem;  /* same as navbar height */
 }
