--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,10 +10,20 @@
   }
 }
 
+/* html {
+  font-family: var(--font-geist-sans), sans-serif;
+} */
+
 html,
 body {
+  font-family: var(--font-geist-sans), sans-serif;
+  
   max-width: 100vw;
   overflow-x: hidden;
+}
+
+body, h1, h2, h3, h4, h5, h6, p, button, input {
+  font-family: inherit;
 }
 
 body {
@@ -21,12 +31,12 @@ body {
   /* background: var(--background); */
   background: linear-gradient(
     135deg,
-    #f5dacf 0%,
+    #fecba4 0%,
     #bcbcf3 100%
   );
   min-height: 100vh;
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
