--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -20,7 +20,6 @@
 }
 
 .glassCard {
-  /* the semi-transparent “card” container */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -28,11 +27,6 @@
   width: 90%;
   max-width: 1200px;
   min-height: 80vh;
-  // background: var(--glass-bg);
-  // backdrop-filter: blur(20px);
-  // border-radius: 1rem;
-  // box-shadow: 0 8px 32px var(--glass-shadow);
-  // overflow: hidden;
 }
 
 .left {
@@ -51,6 +45,13 @@
   // color: #34346b;
   margin-bottom: 2rem;
   text-align: center;
+}
+
+.results {
+  margin-top: 2rem;
+  font-size: 1.8rem;
+  width: 65%;           /* same width as the grid container */
+  padding-left: 3rem;
 }
 
 .films {
