--- a/src/styles/Navbar.module.scss
+++ b/src/styles/Navbar.module.scss
@@ -11,7 +11,8 @@
 //   background: rgba(255, 255, 255, 0.6);
   backdrop-filter: blur(30px);
     // background: #fecba4; 
-  
+  // mix-blend-mode: difference;
+
   padding: 1.2rem 0 1.2rem 0;  
   background: transparent;
 }
