new movie card component and new liking button

--- a/src/styles/FavouriteButton.module.scss
+++ b/src/styles/FavouriteButton.module.scss
@@ -1,5 +1,6 @@
 .button {
   margin-top: 1rem;
+  margin-bottom: 1rem;
   padding: 0.5rem 1rem;
   background: var(--glass-bg);
   backdrop-filter: blur(10px);
