error handling in searching and adding favourites

--- a/src/styles/Search.module.scss
+++ b/src/styles/Search.module.scss
@@ -64,3 +64,10 @@
   font-size: 1rem;
   cursor: pointer;
 }
+
+.errorMessage {
+  color: #ea4f41;
+  font-size: 1.2rem;
+  text-align: center;
+  margin-top: 20px;
+}
