--- a/src/styles/FavouriteButton.module.scss
+++ b/src/styles/FavouriteButton.module.scss
@@ -7,7 +7,11 @@
   background: var(--glass-bg);
   backdrop-filter: blur(10px);
   border-radius: 0.5rem;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(209, 168, 168, 0.1);
   cursor: pointer;
   font-size: 1rem;
+  color: #34346b;
+}
+.button:hover {
+  background: rgba(255, 255, 255, 0.6);
 }
