--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,7 +39,7 @@ input {
 body {
   color: var(--default-font-color);
   /* background: var(--background); */
-  background: linear-gradient(135deg, #fecba4 0%, #bcbcf3 100%);
+  background: linear-gradient(to bottom, white 0%, #bcbcf3 100%);
   min-height: 100vh;
   margin: 0;
   -webkit-font-smoothing: antialiased;
