--- a/src/styles/SearchBar.module.scss
+++ b/src/styles/SearchBar.module.scss
@@ -10,9 +10,11 @@
   .input {
     padding: 0.25rem 0.75rem;
     font-size: 0.9rem;
+    color: white;
   }
   .inputGroup {
     padding: 0.25rem 0.75rem;
+    color: white; 
   }
 }
 
