some css fixes page headers

--- a/src/styles/Common.module.scss
+++ b/src/styles/Common.module.scss
@@ -25,3 +25,11 @@
   gap: 2.5rem;
   overflow-y: auto;
 }
+
+.pageHeader {
+  text-align: start;
+  margin-top: 2rem;
+  font-size: 1.4rem;
+  width: 85%;
+  padding-left: 3rem;
+}
