--- a/src/styles/MovieCard.module.scss
+++ b/src/styles/MovieCard.module.scss
@@ -1,15 +1,20 @@
 .movieCard {
-  width: 10.5rem;
+  max-width: 10.5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
   cursor: pointer;
+
+  @media (max-width: 768px) {
+    width: 8rem;
+  }
 }
 
 .posterWrapper {
   width: 100%;
-  height: 16rem; // 9.5 * 1.5 (2:3 aspect)
+  // height: 16rem; // 9.5 * 1.5 (2:3 aspect)
+  aspect-ratio: 2 / 3;
   position: relative;
   border-radius: 0.75rem;
   overflow: hidden;
@@ -77,4 +82,16 @@
 .heartIcon:hover {
   background-color: rgba(255, 255, 255, 1);
   cursor: pointer;
+}
+
+.noImage {
+  width: 100%;
+  height: 100%;
+  background: #eee;
+  border-radius: 0.09rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.9rem;
+  color: #685c91;
 }
