ui edts again to be responsive

--- a/src/styles/MovieCard.module.scss
+++ b/src/styles/MovieCard.module.scss
@@ -6,9 +6,9 @@
   text-align: center;
   cursor: pointer;
 
-  @media (max-width: 768px) {
-    width: 8rem;
-  }
+  // @media (max-width: 768px) {
+  //   max-width: 8rem;
+  // }
 }
 
 .posterWrapper {
