--- a/src/styles/Common.module.scss
+++ b/src/styles/Common.module.scss
@@ -15,11 +15,14 @@
   width: 90%;
   max-width: 1200px;
   min-height: 70vh;
+  @media (max-width: 767px) {
+    width: 100%;
+  }
 }
 
 .films {
   width: 100%;
-  padding: 2rem 2rem;
+  padding: 2rem;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
   gap: 2.5rem;
