--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -3,6 +3,10 @@
   font-weight: 700;
   margin-bottom: 2rem;
   text-align: center;
+
+  @media (max-width: 768px) {
+    font-size: 2.5rem;
+  }
 }
 
 :root {
