--- a/src/styles/MovieDetails.module.scss
+++ b/src/styles/MovieDetails.module.scss
@@ -50,6 +50,10 @@
   h1 {
     margin: 0 0 0.5rem;
     font-size: 2rem;
+
+    @media (max-width: 768px) {
+      font-size: 1.5rem;
+    }
   }
   .meta {
     font-size: 1.1rem;
