--- a/src/styles/Loading.module.scss
+++ b/src/styles/Loading.module.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   min-height: 60vh;
   font-size: 1.2rem;
+  width: 100%;
 }
 
 .spinner {
@@ -21,4 +22,12 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.spinnerOverlay {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10;
 }
