removed caching of popular films, added heart animations when you like a film

--- a/src/styles/FavouriteButton.module.scss
+++ b/src/styles/FavouriteButton.module.scss
@@ -15,3 +15,23 @@
 .button:hover {
   background: rgba(255, 255, 255, 0.6);
 }
+
+@keyframes pop {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.4);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.heart {
+  transition: transform 0.2s ease-in-out;
+}
+
+.animate {
+  animation: pop 0.3s ease;
+}
