--- a/src/styles/MovieDetails.module.scss
+++ b/src/styles/MovieDetails.module.scss
@@ -8,7 +8,7 @@
   width: 100%;
   height: 60vh;
   background-size: cover;
-  background-position: center;
+  background-position: 0% 20%;
   position: relative;
   filter: brightness(0.6);
 
