--- a/src/components/NavBar/Navbar.module.scss
+++ b/src/components/NavBar/Navbar.module.scss
@@ -4,13 +4,7 @@
   left: 0;
   right: 0;
   z-index: 100;
-
-  //   padding: 0.75rem 0;
-  //   background: var(--glass-bg);
-  //   background: rgba(255, 255, 255, 0.6);
   backdrop-filter: blur(30px);
-  // background: #fecba4;
-  // mix-blend-mode: difference;
 
   padding: 1.2rem 0 1.2rem 0;
   height: auto;
@@ -28,7 +22,6 @@
   gap: 1rem;
 }
 
-/* Left */
 .brand a {
   font-size: 2rem;
   font-weight: bold;
@@ -36,18 +29,15 @@
 }
 
 .brand {
-  /* optional: ensure the logo never sits flush to the next flex item */
   margin-right: 1rem;
 }
 
-/* Center */
 .center {
   flex: 1;
   display: flex;
   justify-content: center;
 }
 
-/* Right */
 .links a {
   margin-left: 1.5rem;
   text-decoration: none;
@@ -83,7 +73,6 @@
   border-top: 1px solid #ddd;
 }
 
-/* MEDIA QUERIES */
 @media (max-width: 768px) {
   .links,
   .searchDesktop {
@@ -107,18 +96,11 @@
   }
 
   .brand a {
-    font-size: 1.5rem; /* even smaller on phones */
+    font-size: 1.5rem;
   }
 }
 
 @media (max-width: 1024px) {
-  // .searchDesktop {
-  //   /* hide search on tablets & phones */
-  //   display: none;
-  // }
-  // .mobileSearch {
-  //   display: flex;
-  // }
   .brand a {
     font-size: 1.5rem;
   }
